--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.sourceEncoding=UTF-8
 # Username, password will be injected
 sonar.login=admin
 
-# Remove certain issues as not really good for soci
+# Remove certain issues as not really good for segun
 sonar.issue.ignore.multicriteria=e1
 sonar.issue.ignore.multicriteria.e1.ruleKey=php:S1192
 sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.php
