--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location ~ ^/index\.php(/|$) {
-        fastcgi_pass status-monitoring:9000;
+        fastcgi_pass observer:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         fastcgi_read_timeout 60;
         include fastcgi_params;
